[gd_scene load_steps=10 format=3 uid="uid://32cfhnyp58w1"]

[ext_resource type="Texture2D" uid="uid://gs7yjwpg82rh" path="res://assets/grenade.png" id="1_cvyik"]
[ext_resource type="Script" uid="uid://bdf47ynlisej2" path="res://scripts/grenade.gd" id="1_wxtds"]
[ext_resource type="AudioStream" uid="uid://bir7dqoiabvjt" path="res://audios/explosion.mp3" id="3_vhiwl"]
[ext_resource type="Texture2D" uid="uid://bn16mnhtt87jt" path="res://assets/point_light.png" id="4_76ndk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wxtds"]
radius = 2.0000002
height = 6.000001

[sub_resource type="CircleShape2D" id="CircleShape2D_vhiwl"]
radius = 100.0

[sub_resource type="Animation" id="Animation_76ndk"]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.21022403, 0.21022403),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_snp8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0o0f"]
_data = {
&"RESET": SubResource("Animation_snp8f"),
&"explode": SubResource("Animation_76ndk")
}

[node name="Grenade" type="CharacterBody2D"]
script = ExtResource("1_wxtds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("CapsuleShape2D_wxtds")
disabled = true

[node name="Grenade" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_cvyik")

[node name="ExplosionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_vhiwl")

[node name="FuzeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ThrowTime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vhiwl")
volume_db = 5.0
max_distance = 1000.0

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1e-05, 1e-05)
enabled = false
color = Color(0.5882353, 0.3137255, 0, 0.78431374)
blend_mode = 2
shadow_enabled = true
shadow_filter = 1
shadow_item_cull_mask = 3
texture = ExtResource("4_76ndk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t0o0f")
}

[connection signal="timeout" from="FuzeTimer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
